chore: Update index.html

--- a/en/index.html
+++ b/en/index.html
@@ -11,7 +11,7 @@ title: Canada.ca blog
 {%- assign locales = site.data.locales.index -%}
 <p>{{ locales.intro[ page.lang ] }}</p>
 <section class="followus">
-	<h2>{{ locales.follow[ page.lang ] }}</h2>
+	<h2>{{ locales.followus[ page.lang ] }}</h2>
 	<ul>
 		<li><a href="{{ site.baseurl }}/{{ locales.feedurl[ page.lang ] }}" class="rss" rel="external"><span class="wb-inv">{{ locales.feed[ page.lang ] }}</span></a></li>
 		<li><a href="{{ site.baseurl }}/pages/{{ locales.signupurl[ page.lang ] }}" class="email" rel="external"><span class="wb-inv">{{ locales.signup[ page.lang ] }}</span></a></li>
