fix: Update project-overview.html

--- a/en/pages/project-overview.html
+++ b/en/pages/project-overview.html
@@ -48,7 +48,7 @@
 				<div class="row">
 					<div class="col-md-12">
 						<ul class="list-inline margin-bottom-none">
-							<li><a lang="fr" href=" {{ '/pages/apercu-projet.html' | prepend: site.urlalt[ page.lang ] }} ">Français</a></li>
+							<li><a lang="fr" href="https://blogue.canada.ca/pages/apercu-projet.html">Français</a></li>
 						</ul>
 					</div>
 				</div>
