fix: Update sitesearch.html

--- a/en/pages/Canada.ca-spring-update.html
+++ b/en/pages/Canada.ca-spring-update.html
@@ -70,7 +70,7 @@
 				</div>
 				<section id="wb-srch" class="col-lg-8 text-right">
 					<h2>Search</h2>
-					<form action="https://recherche-search.gc.ca/rGs/s_r?#wb-land" method="get" role="search" class="form-inline">
+					<form action="https://canada.ca/en/sr/srb.html" method="get" role="search" class="form-inline">
 
 						<div class="form-group">
 
