--- a/fr/pages/_drafts/apercu-projet-draft-plzrestart-need-toggles-from-latest-live.html
+++ b/fr/pages/_drafts/apercu-projet-draft-plzrestart-need-toggles-from-latest-live.html
@@ -50,7 +50,7 @@
 					<section id="wb-srch" class="col-lg-8 text-right">
 
 						<h2>Recherche</h2>
-						<form action="https://recherche-search.gc.ca/rGs/s_r?#wb-land" method="get" role="search" class="form-inline">
+						<form action="https://canada.ca/fr/sr/srb.html" method="get" role="search" class="form-inline">
 							<div class="form-group">
 								<label for="wb-srch-q" class="wb-inv">Rechercher dans Canada.ca</label>
 								<input id="wb-srch-q" list="wb-srch-q-ac" class="wb-srch-q form-control" name="q" type="search" value="" size="34" maxlength="170" placeholder="Rechercher dans Canada.ca">
