--- a/en/pages/_drafts/project-overview-draft.html
+++ b/en/pages/_drafts/project-overview-draft.html
@@ -38,7 +38,7 @@
 				</div>
 				<section id="wb-srch" class="col-lg-8 text-right">
 					<h2>Search</h2>
-					<form action="https://recherche-search.gc.ca/rGs/s_r?#wb-land" method="get" role="search" class="form-inline">
+					<form action="https://canada.ca/en/sr/srb.html" method="get" role="search" class="form-inline">
 						<div class="form-group">
 							<label for="wb-srch-q" class="wb-inv">Search website</label>
 							<input id="wb-srch-q" list="wb-srch-q-ac" class="wb-srch-q form-control" name="q" type="search" value="" size="27" maxlength="150" placeholder="Search Canada.ca">
