--- a/fr/pages/decisions-demarrer-entreprise.html
+++ b/fr/pages/decisions-demarrer-entreprise.html
@@ -54,7 +54,7 @@
 </div>
 <section id="wb-srch" class="col-lg-8 text-right">
 	<h2>Recherche</h2>
-<form action="https://recherche-search.gc.ca/rGs/s_r?#wb-land" method="get" role="search" class="form-inline">
+<form action="https://canada.ca/fr/sr/srb.html" method="get" role="search" class="form-inline">
 
 <div class="form-group">
 
