--- a/en/pages/project-overview.html
+++ b/en/pages/project-overview.html
@@ -6,8 +6,7 @@
 
 <head>
 	<meta charset="utf-8">
-	<!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW)
-		wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
+	<!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
 	<title>Improving content on Canada.ca - Canada.ca</title>
 	<meta content="width=device-width,initial-scale=1" name="viewport">
 
