--- a/en/pages/project-overview.html
+++ b/en/pages/project-overview.html
@@ -34,7 +34,7 @@
 <body class="cnt-wdth-lmtd" vocab="http://schema.org/" typeof="WebPage">
 	<ul id="wb-tphp">
 		<li class="wb-slc">
-			<a class="wb-sl" href="#wb-cont">Skip to main content 2</a>
+			<a class="wb-sl" href="#wb-cont">Skip to main content</a>
 		</li>
 		<li class="wb-slc">
 			<a class="wb-sl" href="#wb-info">Skip to "About government"</a>
