--- a/fr/pages/apercu-projet.html
+++ b/fr/pages/apercu-projet.html
@@ -207,48 +207,13 @@ layout: void
 														</thead>
 														<tbody>
 															<tr>
-																<td class="table-smnum">50&nbsp;%</td>
-																<td class="table-smnum">À venir <sup id="fn1-reperage-rf">
-																		<a class="fn-lnk" href="#fn1-reperage">
-																			<span class="wb-inv">Note de bas de page</span>1</a>
-																	</sup>
-																<td class="table-smnum">À venir. Partie 1&nbsp;: le fil d’Ariane est passé de «&nbsp;Accueil&nbsp;» à «&nbsp;Canada.ca&nbsp;» </td>
+																<td class="table-smnum">54 %</td>
+																<td class="table-smnum">61 %</td>
+																<td class="table-smnum">Comparativement à d’autres projets d’optimisation pour lesquels nous avions prévu d’importantes améliorations, dans ce projet, nous avions comme objectif de maintenir, ou peut être même d’accroître, la réussite des tâches, même si nous avions supprimé le menu et adopté le système de conception Canada.ca. Nous avons atteint notre objectif.</td>
 															</tr>
+															<tr><a href="https://blogue.canada.ca/resumes-recherche/orientation-dans-canada-ca.html">Résumé de recherche : Orientation dans Canada.ca</tr></a>
 														</tbody>
 													</table>
-
-													<h4 style="margin-top: 0px;">Scénarios de tâches testés</h4>
-													<div>
-														<ul class="custul">
-															<li class="custli">Votre cousin de France n’aura pas besoin de visa pour venir en visite, mais il devra obtenir une autorisation de voyage électronique. Combien coûtera cette demande? Commencez sur une page de résultats de Google avec des liens vers Canada.ca et d’autres sites.</li>
-															<li class="custli">Votre ami égyptien veut venir étudier dans une université canadienne cette année. Combien coûtera une demande de permis d’études? Commencez sur une page d’Immigration, Réfugiés et Citoyenneté de Canada.ca.</li>
-															<li class="custli">Yen a demandé une carte de résidente permanente et doit savoir si la carte a été envoyée par la poste. Trouvez une page où elle peut entrer son nom d’utilisateur et son mot de passe pour accéder à son compte d’immigration. Commencez sur une page d’Immigration, Réfugiés et Citoyenneté de Canada.ca.</li>
-															<li class="custli">Vous avez fini de chercher des idées pour la prochaine saison agricole. Maintenant, vous avez besoin de savoir s’il y a une façon particulière d’embaucher des travailleurs agricoles saisonniers temporaires du Mexique. Commencez sur une page de Canada.ca.</li>
-															<li class="custli">Votre ami va commencer à cultiver du blé ce printemps en Saskatchewan. Y a-t-il une assurance-récolte dans cette province? Commencez sur une page du site d’Agriculture Canada.</li>
-															<li class="custli">Cet ami veut comprendre le marché du blé biologique à l’extérieur du Canada. Y a-t-il des rapports de 2019 qui présentent un aperçu du commerce et des tendances de consommation qui pourraient les aider? Commencez sur une page du site d’Agriculture Canada.</li>
-															<li class="custli">Nour est une ancienne combattante blessée qui prépare son budget familial. Combien peut-elle s’attendre à recevoir si son conjoint Pat est reconnu comme étant son aidant naturel au quotidien? Commencez sur une page du site d’Anciens Combattants Canada.</li>
-															<li class="custli">Comme tous les parents canadiens, Pat et Nour reçoivent également des paiements mensuels de l’Allocation canadienne pour enfants pour leur fils de 15 ans. Recevront-ils encore des paiements le mois prochain, lorsque leur fils aura 16 ans? Commencez sur une page du site d’Anciens Combattants Canada.</li>
-															<li class="custli">Nour vient de changer de banque. Est-il possible pour elle de modifier ses renseignements bancaires en ligne pour ses paiements d’ancienne combattante, ou devrait-elle appeler le gouvernement? Commencez sur une page du site d’Anciens Combattants Canada.</li>
-															<li class="custli">Vous avez cherché et trouvé des rapports sur le soya, mais vous avez maintenant besoin de chiffres récents. Trouvez la production estimative de soya pour 2019 au Canada. Commencez sur une page du site de Statistique Canada.</li>
-															<li class="custli">Vous avez reçu un message vocal d’une personne qui prétend être un intervieweur de Statistique Canada. Il vous dit que votre ménage a été sélectionné pour participer à l’Enquête sur la population active. Trouvez le numéro de téléphone spécial que les participants à l’enquête peuvent composer pour vérifier s’il s’agit d’une véritable enquête. Commencez sur une page du site de Statistique Canada.</li>
-															<li class="custli">Zak a été accepté dans un programme de deux ans menant à un diplôme au Royaume-Uni. Combien coûtera sa demande de visa d’étudiant? Commencez sur une page de Gov.UK pour comparer l’expérience sur ce site comparativement à une tâche semblable sur Canada.ca. (Pour la recherche uniquement, et non pour une tâche de rendement).</li>
-														</ul>
-														<br>
-														<aside class="wb-fnote" role="note">
-
-															<h2 class="wb-inv" id="fn-reperage">Notes de bas de page: Orientation et repérage</h2>
-															<dl>
-																<dt>Note de bas de page 1</dt>
-																<dd id="fn1-reperage">
-																	<p>Le projet d'optimisation a été suspendu en raison de la pandémie de COVID-19. Les informations seront mises à jour lors de la reprise des projets. </p>
-																	<p class="fn-rtn">
-																		<a href="#fn1-reperage-rf">
-																			<span class="wb-inv">Retour à la note de bas de page</span>1<span class="wb-inv"> referrer</span></a>
-																	</p>
-																</dd>
-															</dl>
-														</aside>
-													</div>
 												</div>
 											</details>
 											<details>
