--- a/fr/pages/apercu-projet.html
+++ b/fr/pages/apercu-projet.html
@@ -211,9 +211,9 @@ layout: void
 																<td class="table-smnum">61 %</td>
 																<td class="table-smnum">Comparativement à d’autres projets d’optimisation pour lesquels nous avions prévu d’importantes améliorations, dans ce projet, nous avions comme objectif de maintenir, ou peut être même d’accroître, la réussite des tâches, même si nous avions supprimé le menu et adopté le système de conception Canada.ca. Nous avons atteint notre objectif.</td>
 															</tr>
-															<tr><a href="https://blogue.canada.ca/resumes-recherche/orientation-dans-canada-ca.html">Résumé de recherche : Orientation dans Canada.ca</tr></a>
 														</tbody>
 													</table>
+												<p><a href="https://blogue.canada.ca/resumes-recherche/orientation-dans-canada-ca.html">Résumé de recherche : Orientation dans Canada.ca</a></p>
 												</div>
 											</details>
 											<details>
