--- a/en/pages/signup.html
+++ b/en/pages/signup.html
@@ -41,7 +41,7 @@ title: Sign up to the Digital Transformation Office mailing list
 			}
 		</style>
 		<div id="mc_embed_signup">
-			<form action="https://github.us12.list-manage.com/subscribe/post?u=5700d338d6ab413ebca1099f4&amp;id=c6bb0b9f64" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate paddingc" target="_blank" novalidate>
+			<form action="https://canada.us15.list-manage.com/subscribe?u=729a207773f7324e217a1d945&id=89b9100e87" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate paddingc" target="_blank" novalidate>
 				<div id="mc_embed_signup_scroll">
 					<div class="mc-field-group">
 						<label class="wb-inv" for="mce-EMAIL">{{ locales.mce-email[ page.language ] }}</label>
