--- a/fr/pages/inscrire.html
+++ b/fr/pages/inscrire.html
@@ -42,7 +42,7 @@ title: Abonnez-vous à la liste d’envoi du Bureau de la transformation numéri
 			}
 		</style>
 		<div id="mc_embed_signup">
-			<form action="https://github.us12.list-manage.com/subscribe/post?u=5700d338d6ab413ebca1099f4&amp;id=9d5271b4ca" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate paddingc" target="_blank" novalidate>
+			<form action="https://canada.us15.list-manage.com/subscribe?u=729a207773f7324e217a1d945&id=8764caedfb" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate paddingc" target="_blank" novalidate>
 				<div id="mc_embed_signup_scroll">
 					<div class="mc-field-group">
 						<label class="wb-inv" for="mce-EMAIL">{{ locales.mce-email[ page.language ] }}</label>
