Improving content on Canada.ca

--- a/en/pages/project-overview.html
+++ b/en/pages/project-overview.html
@@ -3,7 +3,8 @@ altLangPage: /pages/apercu-projet
 css:
   - ../css/blog-dto-btn.css
   - ../css/blog.css
-dateModified: 2020-11-20
+date: 2020-11-20
+dateModified: 2023-12-07
 title: Improving content on Canada.ca
 titleH1: Improving content on Canada.ca
 ---
