--- a/en/research-summaries/recalls-safety-alerts-research-summary.html
+++ b/en/research-summaries/recalls-safety-alerts-research-summary.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
    <head>
-      <http-equiv="refresh" content="0; url=https://design.canada.ca/research-summaries/recalls-safety-alerts-research-summary.html"> 
+      <http-equiv="refresh" content="0; url='https://design.canada.ca/research-summaries/recalls-safety-alerts-research-summary.html'"> 
    </head>
 </html> 
