--- a/en/research-summaries/recalls-safety-alerts-research-summary.html
+++ b/en/research-summaries/recalls-safety-alerts-research-summary.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html>
+<!doctype html>
+<html>
    <head>
       <http-equiv="refresh" content="0; url='https://design.canada.ca/research-summaries/recalls-safety-alerts-research-summary.html'"> 
    </head>
