--- a/en/pages/project-overview.html
+++ b/en/pages/project-overview.html
@@ -269,7 +269,7 @@ titleH1: Improving content on Canada.ca
 										</ul>
 
 										<p>
-											<a href="../research-summaries/recalls-safety-alerts-research-summary.html">Research summary: Recalls and safety alerts search</a>
+											<a href="https://design.canada.ca/research-summaries/recalls-safety-alerts-research-summary.html">Research summary: Recalls and safety alerts search</a>
 										</p>
 									</div>
 								</details>
