--- a/en/pages/project-overview.html
+++ b/en/pages/project-overview.html
@@ -84,7 +84,7 @@ titleH1: Improving content on Canada.ca
 											</tbody>
 										</table>
 
-										<p><a href="https://blog.canada.ca/research-summaries/wayfinding-on-canada-ca.html">Research summary: Wayfinding on Canada.ca</a>
+										<p><a href="https://design.canada.ca//research-summaries/wayfinding-on-canada-ca.html">Research summary: Wayfinding on Canada.ca</a>
 									</div>
 								</details>
 
