--- a/fr/pages/apercu-projet.html
+++ b/fr/pages/apercu-projet.html
@@ -213,7 +213,7 @@ layout: void
 															</tr>
 														</tbody>
 													</table>
-												<p><a href="https://conception.canada.ca/resumes-recherche/orientation-dans-canada-ca.html">Résumé de recherche : Orientation dans Canada.ca</a></p>
+												<p><a href="https://conception.canada.ca/resumes-recherche/orientation-dans-canada-ca.html">Résumé de recherche&nbsp;: Orientation dans Canada.ca</a></p>
 												</div>
 											</details>
 											<details>
