--- a/fr/pages/apercu-projet.html
+++ b/fr/pages/apercu-projet.html
@@ -370,7 +370,7 @@ layout: void
 															</ul>
 															<br>
 															<p>
-																<a href="https://conception.canada.ca/resumes-recherche/rappels-securite-resume-recherche.html">Résumé de recherche : Recherche de rappels et d'avis de sécurité</a>
+																<a href="https://conception.canada.ca/resumes-recherche/rappels-securite-resume-recherche.html">Résumé de recherche&nbsp;: Recherche de rappels et d'avis de sécurité</a>
 															</p>
 														</div>
 											</details>
