--- a/fr/pages/apercu-projet.html
+++ b/fr/pages/apercu-projet.html
@@ -641,7 +641,7 @@ layout: void
 														</ul>
 														<br>
 														<p>
-															<a href="https://conception.canada.ca/resumes-recherche/arc-contactez-nous-resume-recherche.html">Résumé de recherche : Communiquer avec l'ARC</a>
+															<a href="https://conception.canada.ca/resumes-recherche/arc-contactez-nous-resume-recherche.html">Résumé de recherche&nbsp;: Communiquer avec l'ARC</a>
 														</p>
 													</div>
 												</div>
