--- a/fr/pages/apercu-projet.html
+++ b/fr/pages/apercu-projet.html
@@ -554,7 +554,7 @@ layout: void
 														</ul>
 														<br>
 														<p>
-															<a href="https://conception.canada.ca/resumes-recherche/conseils-voyageurs-resume-recherche.html">Résumé de recherche : Conseils aux voyageurs et avertissements</a>
+															<a href="https://conception.canada.ca/resumes-recherche/conseils-voyageurs-resume-recherche.html">Résumé de recherche&nbsp;: Conseils aux voyageurs et avertissements</a>
 														</p>
 														<aside class="wb-fnote" role="note">
 
