--- a/fr/pages/apercu-projet.html
+++ b/fr/pages/apercu-projet.html
@@ -991,7 +991,7 @@ layout: void
 														</ul>
 														<br>
 														<p>
-															<a href="https://conception.canada.ca/resumes-recherche/rappels-resume-recherche.html">Résumé de recherche : Rappels et alertes de sécurité</a>
+															<a href="https://conception.canada.ca/resumes-recherche/rappels-resume-recherche.html">Résumé de recherche&nbsp;: Rappels et alertes de sécurité</a>
 														</p>
 													</div>
 												</div>
