--- a/fr/pages/apercu-projet.html
+++ b/fr/pages/apercu-projet.html
@@ -426,7 +426,7 @@ layout: void
 														</ul>
 														<br>
 														<p>
-															<a href="..//resumes-recherche/achats-electroniques-resume-recherche.html">Résumé de recherche : Solution d'approvisionnement électronique</a>
+															<a href="https://conception.canada.ca/resumes-recherche/achats-electroniques-resume-recherche.html">Résumé de recherche : Solution d'approvisionnement électronique</a>
 														</p>
 													</div>
 												</div>
@@ -1046,7 +1046,7 @@ layout: void
 														</ul>
 														<br>
 														<p>
-															<a href="..//resumes-recherche/prochesaidants-resume-recherche.html">Résumé de recherche : Prestations spéciales d'assurance-emploi</a>
+															<a href="https://conception.canada.ca/resumes-recherche/prochesaidants-resume-recherche.html">Résumé de recherche : Prestations spéciales d'assurance-emploi</a>
 														</p>
 													</div>
 												</div>
