--- a/fr/pages/apercu-projet.html
+++ b/fr/pages/apercu-projet.html
@@ -1227,7 +1227,7 @@ layout: void
 														</ul>
 														<br>
 														<p>
-															<a href="https://conception.canada.ca/resumes-recherche/meteo-resume-recherche.html">Résumé de recherche : Renseignements météorologiques </a>
+															<a href="https://conception.canada.ca/resumes-recherche/meteo-resume-recherche.html">Résumé de recherche&nbsp;: Renseignements météorologiques </a>
 														</p>
 													</div>
 												</div>
