--- a/fr/pages/apercu-projet.html
+++ b/fr/pages/apercu-projet.html
@@ -706,7 +706,7 @@ layout: void
 														</ul>
 														<br>
 														<p>
-															<a href="https://conception.canada.ca/resumes-recherche/maternite-parentales-resume-recherche.html">Résumé de recherche : Prestations de maternité et parentales d'assurance-emploi</a>
+															<a href="https://conception.canada.ca/resumes-recherche/maternite-parentales-resume-recherche.html">Résumé de recherche&nbsp;: Prestations de maternité et parentales d'assurance-emploi</a>
 														</p>
 													</div>
 												</div>
