--- a/fr/pages/apercu-projet.html
+++ b/fr/pages/apercu-projet.html
@@ -1104,7 +1104,7 @@ layout: void
 														</ul>
 														<br>
 														<p>
-															<a href="https://conception.canada.ca/resumes-recherche/impots-resume-recherche.html">Résumé de recherche : TPS/TVH et retenues sur la paie</a>
+															<a href="https://conception.canada.ca/resumes-recherche/impots-resume-recherche.html">Résumé de recherche&nbsp;: TPS/TVH et retenues sur la paie</a>
 														</p>
 													</div>
 												</div>
