--- a/fr/pages/apercu-projet.html
+++ b/fr/pages/apercu-projet.html
@@ -1163,7 +1163,7 @@ layout: void
 														<br>
 														<p>
 															<a href="https://conception.canada.ca/resumes-recherche/maladies-resume-recherche.html">
-																<span class="wb-inv">Renseignements sur les maladies et la vaccination&nbsp;: </span>Résumé de recherche : Renseignements sur les maladies et la vaccination</a>
+																<span class="wb-inv">Renseignements sur les maladies et la vaccination&nbsp;: </span>Résumé de recherche&nbsp;: Renseignements sur les maladies et la vaccination</a>
 														</p>
 													</div>
 												</div>
