Update tbs email for cds email

--- a/en/research-summaries/find-job-research-summary.html
+++ b/en/research-summaries/find-job-research-summary.html
@@ -229,7 +229,7 @@ end optional -->
 
 <h2>Request the research </h2>
 
-<p>Email us at <a href="mailto:dto.btn@tbs-sct.gc.ca">dto.btn@tbs-sct.gc.ca</a> if you have questions, or would like to know more about this research.
+<p>Email us at <a href="mailto:{{ site.emails.dto }}">{{ site.emails.dto }}</a> if you have questions, or would like to know more about this research.
 </a></p>
 
 <h2>What do you think?</h2>
