--- a/fr/resumes-recherche/impots-resume-recherche.html
+++ b/fr/resumes-recherche/impots-resume-recherche.html
@@ -239,7 +239,7 @@ Description détaillée
 
 <h2> Demander les résultats de recherche </h2>
 
-<p>Si vous souhaitez voir les conclusions de recherche de ce projet, faites-le-nous savoir. Envoyez un courriel à <a href="mailto:dto.btn@tbs-sct.gc.ca">dto.btn@tbs-sct.gc.ca</a>.</p>
+<p>Si vous souhaitez voir les conclusions de recherche de ce projet, faites-le-nous savoir. Envoyez un courriel à <a href="mailto:{{ site.emails.dto }}">{{ site.emails.dto }}</a>.</p>
 
 <h2>Qu’en pensez-vous? </h2>
 
