--- a/fr/resumes-recherche/meteo-resume-recherche.html
+++ b/fr/resumes-recherche/meteo-resume-recherche.html
@@ -285,7 +285,7 @@ La page «&nbsp;Nouvelle version&nbsp;» est également animée et défile jusqu
 
 <h2>Demander les résultats de recherche </h2>
 
-<p>Communiquez avec nous à l’adresse <a href="mailto:dto.btn@tbs-sct.gc.ca">dto.btn@tbs-sct.gc.ca</a> si vous avez des questions ou si vous souhaitez en savoir plus sur cette recherche.</p>
+<p>Communiquez avec nous à l’adresse <a href="mailto:{{ site.emails.dto }}">{{ site.emails.dto }}</a> si vous avez des questions ou si vous souhaitez en savoir plus sur cette recherche.</p>
 
 <h2>Qu’en pensez-vous? </h2>
 
