--- a/fr/resumes-recherche/prets-etudiants-resume-recherche.html
+++ b/fr/resumes-recherche/prets-etudiants-resume-recherche.html
@@ -208,7 +208,7 @@ Paiement forfaitaire
 
 <h2>Demander les résultats de recherche</h2>
 
-<p>Si vous souhaitez consulter les détails des résultats de recherche dans le cadre de ce projet, veuillez envoyer un courriel à <a href="mailto:dto.btn@tbs-sct.gc.ca">dto.btn@tbs-sct.gc.ca</a>.
+<p>Si vous souhaitez consulter les détails des résultats de recherche dans le cadre de ce projet, veuillez envoyer un courriel à <a href="mailto:{{ site.emails.dto }}">{{ site.emails.dto }}</a>.
 
 <h2>Dites-nous ce que vous en pensez</h2>
 
