--- a/fr/resumes-recherche/prochesaidants-resume-recherche.html
+++ b/fr/resumes-recherche/prochesaidants-resume-recherche.html
@@ -219,7 +219,7 @@ Description détaillée
 
 <h2>Demander la recherche</h2>
 
-<p>Envoyez-nous un courriel à <a href="mailto:dto.btn@tbs-sct.gc.ca">dto.btn@tbs-sct.gc.ca</a> si vous avez des questions ou si vous souhaitez en savoir davantage sur cette recherche.
+<p>Envoyez-nous un courriel à <a href="mailto:{{ site.emails.dto }}">{{ site.emails.dto }}</a> si vous avez des questions ou si vous souhaitez en savoir davantage sur cette recherche.
 
 <h2>Qu’en pensez-vous? </h2>
 
