--- a/en/research-summaries/business-account-research-summary.html
+++ b/en/research-summaries/business-account-research-summary.html
@@ -156,7 +156,7 @@ layout: void
 			</details>
 
 			<h2>Request the research </h2>
-			<p>If you’d like to see the research findings from this project, let us know. Email us at <a href="mailto:dto.btn@tbs-sct.gc.ca">dto.btn@tbs-sct.gc.ca</a>.
+			<p>If you’d like to see the research findings from this project, let us know. Email us at <a href="mailto:{{ site.emails.dto }}">{{ site.emails.dto }}</a>.
 
 			<h2>Let us know what you think</h2>
 			<p>Tweet using the hashtag #Canadadotca.</p>
