--- a/en/research-summaries/caregiving-research-summary.html
+++ b/en/research-summaries/caregiving-research-summary.html
@@ -219,7 +219,7 @@ Detailed description
 
 <h2>Request the research </h2>
 
-<p>If you’d like to see the research findings from this project, let us know. Email us at <a href="mailto:dto.btn@tbs-sct.gc.ca">dto.btn@tbs-sct.gc.ca</a>.
+<p>If you’d like to see the research findings from this project, let us know. Email us at <a href="mailto:{{ site.emails.dto }}">{{ site.emails.dto }}</a>.
 
 <h2>What do you think? </h2>
 
