--- a/en/research-summaries/citizenship-test-research-summary.html
+++ b/en/research-summaries/citizenship-test-research-summary.html
@@ -184,7 +184,7 @@ For example:</p>
 
 <h2>Request the research </h2>
 
-<p>If you’d like to see the research findings from this project, let us know. Email us at <a href="mailto:dto.btn@tbs-sct.gc.ca">dto.btn@tbs-sct.gc.ca</a>.
+<p>If you’d like to see the research findings from this project, let us know. Email us at <a href="mailto:{{ site.emails.dto }}">{{ site.emails.dto }}</a>.
 
 <h2>Let us know what you think</h2>
 
