--- a/en/research-summaries/diseases-research-summary.html
+++ b/en/research-summaries/diseases-research-summary.html
@@ -246,7 +246,7 @@ Below that is a short paragraph of text too small to read, followed by a search 
 
 <h2>Request the research </h2>
 
-<p>Email us at <a href="mailto:dto.btn@tbs-sct.gc.ca">dto.btn@tbs-sct.gc.ca</a> if you have questions, or would like to know more about this research.</p>
+<p>Email us at <a href="mailto:{{ site.emails.dto }}">{{ site.emails.dto }}</a> if you have questions, or would like to know more about this research.</p>
 
 <h2> What do you think? </h2>
 
