--- a/en/research-summaries/electronic-procurement-research-summary.html
+++ b/en/research-summaries/electronic-procurement-research-summary.html
@@ -260,7 +260,7 @@ src="/images/Find-the-way.PNG" width="700">
 <div class="clearfix"></div>
 <h2>Request the research</h2>
 
-<p>If you’d like to see the detailed research findings from this project, email us at <a href="mailto:dto.btn@tbs-sct.gc.ca">dto.btn@tbs-sct.gc.ca</a>.
+<p>If you’d like to see the detailed research findings from this project, email us at <a href="mailto:{{ site.emails.dto }}">{{ site.emails.dto }}</a>.
 </a></p>
 
 <h2>Let us know what you think</h2>
