--- a/en/research-summaries/student-loans-research-summary.html
+++ b/en/research-summaries/student-loans-research-summary.html
@@ -201,7 +201,7 @@ Lump-sum payment
 
 <h2>Request the research</h2>
 
-<p>If you’d like to see the detailed research findings from this project, email us at <a href="mailto:dto.btn@tbs-sct.gc.ca">dto.btn@tbs-sct.gc.ca</a>.
+<p>If you’d like to see the detailed research findings from this project, email us at <a href="mailto:{{ site.emails.dto }}">{{ site.emails.dto }}</a>.
 </a></p>
 
 <h2>Let us know what you think</h2>
