--- a/fr/resumes-recherche/comptes-entreprises-resume-recherche.html
+++ b/fr/resumes-recherche/comptes-entreprises-resume-recherche.html
@@ -174,7 +174,7 @@ layout: void
 
 <h2>Demander les résultats de recherche</h2>
 
-<p>Si vous souhaitez voir les conclusions de recherche de ce projet, faites-le-nous savoir. Envoyez un courriel à <a href="mailto:dto.btn@tbs-sct.gc.ca">dto.btn@tbs-sct.gc.ca</a>.</p>
+<p>Si vous souhaitez voir les conclusions de recherche de ce projet, faites-le-nous savoir. Envoyez un courriel à <a href="mailto:{{ site.emails.dto }}">{{ site.emails.dto }}</a>.</p>
 
 <h2>Donnez-nous votre avis</h2>
 
