--- a/fr/resumes-recherche/conseils-voyageurs-resume-recherche.html
+++ b/fr/resumes-recherche/conseils-voyageurs-resume-recherche.html
@@ -215,7 +215,7 @@ Voici quelques-unes de ces mesures&nbsp;:</p>
 <div class="clearfix"></div>
 <h2>Demander les résultats de recherche</h2>
 
-<p>Si vous souhaitez voir les conclusions de recherche détaillés de ce projet, envoyez-nous un courriel à <a href="mailto:dto.btn@tbs-sct.gc.ca">dto.btn@tbs-sct.gc.ca</a>.
+<p>Si vous souhaitez voir les conclusions de recherche détaillés de ce projet, envoyez-nous un courriel à <a href="mailto:{{ site.emails.dto }}">{{ site.emails.dto }}</a>.
 
 <h2>Dites-nous ce que vous en pensez</h2>
 
