--- a/fr/resumes-recherche/maladies-resume-recherche.html
+++ b/fr/resumes-recherche/maladies-resume-recherche.html
@@ -257,7 +257,7 @@ Il y a ensuite un court paragraphe de texte trop petit pour le lire, puis un cha
 
 <h2> Demander les résultats de recherche </h2>
 
-<p>Communiquez avec nous à l’adresse <a href="mailto:dto.btn@tbs-sct.gc.ca">dto.btn@tbs-sct.gc.ca</a> si vous avez des questions ou  si vous souhaitez en savoir plus sur cette recherche.</p>
+<p>Communiquez avec nous à l’adresse <a href="mailto:{{ site.emails.dto }}">{{ site.emails.dto }}</a> si vous avez des questions ou  si vous souhaitez en savoir plus sur cette recherche.</p>
 
 <h2>Qu’en pensez-vous? </h2>
 
