--- a/fr/resumes-recherche/rappels-securite-resume-recherche.html
+++ b/fr/resumes-recherche/rappels-securite-resume-recherche.html
@@ -154,7 +154,7 @@ layout: void
 		<div class="clearfix"></div>
 
 		<h2>Demander les résultats de recherche</h2>
-		<p>Si vous souhaitez voir les conclusions de recherche détaillés de ce projet, envoyez-nous un courriel à <a href="mailto:dto.btn@tbs-sct.gc.ca">dto.btn@tbs-sct.gc.ca</a>.
+		<p>Si vous souhaitez voir les conclusions de recherche détaillés de ce projet, envoyez-nous un courriel à <a href="mailto:{{ site.emails.dto }}">{{ site.emails.dto }}</a>.
 
 		<h2>Dites-nous ce que vous en pensez</h2>
 		<p>Envoyez un gazouillis en utilisant le mot-clic #Canadapointca.</p>
