--- a/fr/resumes-recherche/trouver-emploi-resume-recherche.html
+++ b/fr/resumes-recherche/trouver-emploi-resume-recherche.html
@@ -177,7 +177,7 @@ layout: void
 					</ul>
 
 					<h2>Demander la recherche</h2>
-					<p>Si vous avez des questions ou si vous souhaitez en savoir plus sur cette recherche, envoyez-nous un courriel au <a href="mailto:dto.btn@tbs-sct.gc.ca">dto.btn@tbs-sct.gc.ca</a>.
+					<p>Si vous avez des questions ou si vous souhaitez en savoir plus sur cette recherche, envoyez-nous un courriel au <a href="mailto:{{ site.emails.dto }}">{{ site.emails.dto }}</a>.
 
 					<h2>Qu’en pensez-vous?</h2>
 					<p>Faites-nous savoir ce que vous pensez de ce projet. Envoyez un gazouillis en utilisant le mot-clic #Canadadotca.</p>
