--- a/en/research-summaries/diseases-research-summary.html
+++ b/en/research-summaries/diseases-research-summary.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html>
    <head>
-      <http-equiv="refresh" content="0; url='https://design.canada.ca/research-summaries/diseases-research-summary.html'">
+      <http-equiv="refresh" content="0; url=https://design.canada.ca/research-summaries/diseases-research-summary.html">
    </head>
 </html>
