--- a/en/research-summaries/wayfinding-on-canada-ca.html
+++ b/en/research-summaries/wayfinding-on-canada-ca.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html>
    <head>
-      <http-equiv="refresh" content="0; url='https://design.canada.ca/research-summaries/wayfinding-on-canada-ca.html'">
+      <http-equiv="refresh" content="0; url=https://design.canada.ca/research-summaries/wayfinding-on-canada-ca.html">
    </head>
 </html>
