--- a/en/research-summaries/canada-child-benefit.html
+++ b/en/research-summaries/canada-child-benefit.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html>
    <head>
-      <http-equiv="refresh" content="0; url='https://design.canada.ca/research-summaries/canada-child-benefit.html'">
+      <http-equiv="refresh" content="0; url=https://design.canada.ca/research-summaries/canada-child-benefit.html">
    </head>
 </html>
