--- a/fr/resumes-recherche/comptes-entreprises-resume-recherche.html
+++ b/fr/resumes-recherche/comptes-entreprises-resume-recherche.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html>
    <head>
-      <http-equiv="refresh" content="0; url='https://conception.canada.ca/resumes-recherche/comptes-entreprises-resume-recherche.html'">
+      <http-equiv="refresh" content="0; url=https://conception.canada.ca/resumes-recherche/comptes-entreprises-resume-recherche.html">
    </head>
 </html>
