--- a/en/pages/_drafts/project-overview-draft3.html
+++ b/en/pages/_drafts/project-overview-draft3.html
@@ -139,7 +139,7 @@ layout: void
 	<p>Small changes make a big difference.</p>
 
 	<p>
-Sometimes the words we use, and how we organize them, can make it hard for people to find and understand Government of Canada information and services on Canada.ca. The <abbr title="Treasury Board of Canada Secretariat">TBS</abbr> Digital Transformation Office is working on projects with federal departments to make it easier.</p>
+Sometimes the words we use, and how we organize them, can make it hard for people to find and understand Government of Canada information and services on Canada.ca. The <abbr title="Treasury Board of Canada Secretariat">TBS</abbr> Canada.ca Experience Office is working on projects with federal departments to make it easier.</p>
 
 <p>For each project, we co-create prototypes, set concrete usability targets, and run usability tests with Canadians. We ask questions Canadians have about specific Government of Canada services. For a prototype to launch, it must make it at least 20% easier for people to get the right answer.</p>
 
