--- a/fr/images/gerry-decks/text.html
+++ b/fr/images/gerry-decks/text.html
@@ -2,7 +2,7 @@ Improve customer experience with top tasks / Améliorer l’expérience du clien
 Gerry McGovern masterclass / Atelier de maître de Gerry McGovern<br>
 February 13, 2018 / Le 13 février 2018<br>
 Bayview Yards<br>
-Organized by the Digital Transformation Office, Treasury Board of Canada Secretariat / Organisé par le Bureau de la transformation numérique du Secrétariat du Conseil du Trésor du Canada<br>
+Organized by the Canada.ca Experience Office, Treasury Board of Canada Secretariat / Organisé par le Bureau de l’expérience Canada.ca du Secrétariat du Conseil du Trésor du Canada<br>
 <br>
 Presentation materials - English<br>
 <br>
