--- a/fr/pages/_drafts/apercu-projet-draft.html
+++ b/fr/pages/_drafts/apercu-projet-draft.html
@@ -149,7 +149,7 @@ layout: void
 
 			<h1>Améliorer le contenu sur Canada.ca</h1>
 			<p>De petits changements qui font toute la différence.</p>
-			<p>Parfois, les mots que nous utilisons, et la façon dont nous les organisons, font en sorte qu’il est difficile de trouver ou de comprendre les renseignements du site Canada.ca. Le Bureau de la transformation numérique du Secrétariat du Conseil du Trésor du Canada travaille sur des projets avec des ministères fédéraux afin de faciliter l’utilisation du site.</p>
+			<p>Parfois, les mots que nous utilisons, et la façon dont nous les organisons, font en sorte qu’il est difficile de trouver ou de comprendre les renseignements du site Canada.ca. Le Bureau de l’expérience Canada.ca du Secrétariat du Conseil du Trésor du Canada travaille sur des projets avec des ministères fédéraux afin de faciliter l’utilisation du site.</p>
 			<p>Pour chaque projet, nous cocréons des prototypes, nous établissons des objectifs de facilité d’emploi et nous effectuons des tests de facilité d’emploi auprès des Canadiens. Nous posons des questions qu’ont les Canadiens à propos de services particuliers du gouvernement du Canada. Pour qu’un prototype soit lancé, il doit démontrer qu’il permet aux gens d’obtenir les bonnes réponses au moins 20&nbsp;% plus facilement.</p>
 			<p>En tenant compte du nombre élevé de visites à certaines pages principales, ce genre d’augmentation dans les taux de réussite des tâches est déterminant. Au bout du compte, cela signifie que les personnes passent moins de temps à chercher les réponses dont elles ont besoin de la part du gouvernement du Canada.</p>
 			<div class="container-fluid">
